cmd/install/manifest/openiiot-emqx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openiiot-emqx
  namespace: openiiot-dt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openiiot-emqx
  template:
    metadata:
      labels:
        app: openiiot-emqx
    spec:
      containers:
        - name: openiiot-emqx
          image: emqx/emqx-enterprise:5.7.2
          ports:
            - containerPort: 1883
            - containerPort: 8083
            - containerPort: 8084
            - containerPort: 8883
            - containerPort: 18083
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: emqx-data
              mountPath: "/opt/emqx/data"
      volumes:
        - name: emqx-data
          persistentVolumeClaim:
            claimName: openiiot-emqx-pvc
