cmd/install/manifest/openiiot-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openiiot-mysql
  namespace: openiiot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openiiot-mysql
  template:
    metadata:
      labels:
        app: openiiot-mysql
    spec:
      containers:
        - name: openiiot-mysql
          image: mysql:8.4.2
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: mysql-data
              mountPath: "/var/lib/mysql"
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: openiiot-mysql-pvc
