cmd/install/manifest/openiiot-pma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openiiot-pma
  namespace: openiiot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openiiot-pma
  template:
    metadata:
      labels:
        app: openiiot-pma
    spec:
      containers:
        - name: openiiot-pma
          image: phpmyadmin/phpmyadmin:5.2.1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
