cmd/install/manifest/openiiot-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openiiot-server
  namespace: openiiot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openiiot-server
  template:
    metadata:
      labels:
        app: openiiot-server
    spec:
      serviceAccountName: kube-admin-sa
      containers:
        - name: openiiot-server
          image: openiiot-server:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: server-data
              mountPath: "/volumes"
      volumes:
        - name: server-data
          persistentVolumeClaim:
            claimName: openiiot-server-pvc
