cmd/install/manifest/openiiot-consolemanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openiiot-consolemanager-service
  namespace: openiiot
spec:
  type: ClusterIP
  ports:
    - name: consolemanager3000
      port: 3000
      targetPort: 3000
  selector:
    app: openiiot-consolemanager
