cmd/install/manifest/openiiot-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openiiot-mysql-service
  namespace: openiiot
spec:
  type: ClusterIP
  ports:
    - name: mysql3306
      port: 3306
      targetPort: 3306
  selector:
    app: openiiot-mysql
