cmd/install/manifest/openiiot-pma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openiiot-pma-service
  namespace: openiiot
spec:
  type: NodePort
  ports:
    - name: pma80
      port: 80
      targetPort: 80
      nodePort: 31112
  selector:
    app: openiiot-pma
