cmd/install/manifest/openiiot-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openiiot-server-service
  namespace: openiiot
spec:
  type: NodePort
  ports:
    - name: server8085
      port: 8085
      targetPort: 8085
      nodePort: 31585
  selector:
    app: openiiot-server
