cmd/install/manifest/openiiot-consolemanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openiiot-consolemanager-ingress
  namespace: openiiot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: openiiot-consolemanager-service
            port:
              number: 3000
