cmd/install/manifest/openiiot-pma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openiiot-pma-ingress
  namespace: openiiot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pma/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: openiiot-pma-service
            port:
              number: 80
